--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html, body {
     font-family: customFont;
   }
@@ -18,6 +22,14 @@ h1{
       color:gray;
     }
   }
+
+.center{
+  text-align: center;
+}
+
+.bold{
+  font-weight: bold;
+}
 
 @keyframes fadeInView {
   0%{
@@ -59,12 +71,12 @@ h1{
     h1, h1 p{
       opacity: 0;
       animation: fadeInView 1s forwards;
-      animation-delay: 1s;
+      animation-delay: .8s;
     }
     p{
       opacity: 0;
       animation: fadeInView 1s forwards;
-      animation-delay: 1.6s;
+      animation-delay: 1.4s;
     }
   }
 
@@ -76,21 +88,22 @@ section{
 
 .hero {
     /* Position and center the image to scale nicely on all screens */
-    background-position: center;
+    background-image: url("../images/background.jpg");
+    background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
-    
+    background-attachment: fixed;
     display: flex;
     align-items: center;
     /* Set a specific height */
     height: 100vh;
-    background-image: url("../images/background.jpg");
-
+    
 }
+
+
   
 .test1{
   height:100%;
-  background: #eecb86;
 }
 .navbar {
   z-index: +1;
@@ -99,7 +112,7 @@ section{
   position: sticky;
   display:flex;
   top: 0;
-  background:white;
+  background:#f4e1b2;
   opacity: 0;
 }
 
