--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -2,24 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
-  ::-webkit-scrollbar {
-    width: 0px;
-    background: transparent; /* make scrollbar transparent */
-  }
-
-:root{
-  overflow-x: none;
-}
 body {
   position: relative;
-  box-sizing: border-box;
 }
 
-.wrapper {
-  overflow-x:hidden;
-  overflow:hidden;
-  position: relative;
+body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
 }
+
 h1{
     font-family: customFont;
     font-size: 4.5rem;
@@ -97,6 +92,18 @@ h1{
       animation: fadeInView 1s forwards;
       animation-delay: 1.8s;
     }
+    div{
+      h3{
+      opacity: 0;
+      animation: fadeInView 1s forwards;
+      animation-delay: 3s;
+      }
+      .custombutton{
+        opacity: 0;
+        animation: fadeInView 1s forwards;
+        animation-delay: 3.5s;
+      }
+    }
   }
 
 
@@ -114,6 +121,7 @@ section{
 .hero{ 
   width: 100%;
   height:100vh;
+  z-index: 0;
   .bgimg{
     /* Position and center the image to scale nicely on all screens */
     position: fixed!important;
@@ -135,11 +143,6 @@ section{
   top:+0px!important;
 }
 .navbar {
-  z-index: +1;
-  height:70px;
-  position: -webkit-sticky; /* Safari */
-  position: sticky;
-  top: 0;
   background:#f4e1b2;
   opacity: 0;
 }
